--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,13 +1,4 @@
 tasks:
-  - name: Setup Ultimate Android Environment
+  - name: Setup Java 17
     init: |
       sdk install java 17.0.10-zulu
-      source ~/.bashrc
-      yes | $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --licenses
-    command: |
-      echo "sdk.dir=$ANDROID_HOME" > examples/llm_inference/android/local.properties
-      echo "Ultimate environment is ready. You can now compile the project."
-
-ports:
-  - port: 6080
-    onOpen: open-browser
